tests/NormalTests/paczka1/fuzzy1/72455034.err
Error in line 10: A89 A555 50,0
Error in line 18: xZLnUJQi A555 37,2
Error in line 21: ccJ A372 45,7
Error in line 25: ccJ A89 93,4
Error in line 31: BNVP1PfG79 A555 25,2
